# RS_school_final

./: .gitignore  README.md  pyproject.toml  workspace.sh
scr/forest_ml/: pipeline.py  train.py
